# StarterProject

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  run.py  setup.cfg  tox.ini
.github/workflows/: test.yml  tests.yml
src/example/: __init__.py  example.py
src/mypackage/: mymodule.py
src/mypackage/utils/: __init__.py  general.py
tests/: conftest.py  test_example.py  test_mymodule.py
